added-bullshit-generator

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               into the hands of the people. But is it really 
               fulfilling its promise?
             </p>
-            <a class="bttn-1" href="#">READ MORE</a>
+            <a class="bttn-1" href="https://www.bullshitgenerator.com/">READ MORE</a>
           </div>
           <div class="text-block">
             <h2>New</h2>
