images-quality-edit

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       <div class="container">
         <div class="product-grid">
             <div class="box-1">
-              <div class="card">
-                <img src="images/img1.png" alt="" />
-                <div class="card-text-1">
+              <a href="https://www.canardpc.com/cat%C3%A9gorie/retrogaming/"><div class="card">
+                <img src="images/image-retro-pcs.jpg" alt="" />
+                <div class="card-text">
                     <p class="numbers">01</p>
                     <p class="headings-2">Reviving Retro PCs</p>
                     <p class="parag-3">
@@ -76,23 +76,23 @@
                       are given modern upgrades?
                     </p>
                 </div>
-              </div>
+              </div></a>
             </div>
           <div class="box-2">
-            <div class="card">
-              <img src="images/img2.png" alt="" />
-              <div class="card-text">
-                <p class="numbers">02</p>
-                <p class="headings-2">Top 10 Laptops of 2022</p>
-                <p class="parag-3">
-                  Our best picks for various needs and budgets.
-                </p>
+           <a href="https://www.toptenreviews.com/best-laptops"> <div class="card">
+            <img src="images/image-top-laptops.jpg" alt="" />
+            <div class="card-text">
+              <p class="numbers">02</p>
+              <p class="headings-2">Top 10 Laptops of 2022</p>
+              <p class="parag-3">
+                Our best picks for various needs and budgets.
+              </p></a>
               </div>
             </div>
           </div>
           <div class="box-3">
             <div class="card">
-              <img src="images/img3.png" alt="" />
+              <img src="images/image-gaming-growth.jpg" alt="" />
               <div class="card-text">
                 <p class="numbers">03</p>
                 <p class="headings-2">The Growth of Gaming</p>
